<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>overlay_value_display</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mike@wimblerobotics.com">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>builtin_interfaces</depend>
  <depend>OGRE</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_interface_packages</exec_depend> 

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/overlay_value_display_description.xml"/>
  </export>
</package>